# supercomp

./: .gitignore
01-intro-cpp/: array_exercicio3.py  exercicio1.cpp  exercicio2.cpp  exercicio3.cpp  exercicio4.cpp
02-oo-cpp/: CMakeLists.txt  experiment.cpp  experiment.hpp  experimentLog.cpp  experimentLog.hpp  experimentPow.cpp  experimentPow.hpp  experimentPow3.cpp  experimentPow3.hpp  experimentPow3Mult.cpp  experimentPow3Mult.hpp  experimentSum.cpp  experimentSum.hpp  experimentSumPositives.cpp  experimentSumPositives.hpp  main.cpp
02-oo-cpp/.ipynb_checkpoints/: Filipe Borba - SIMD-checkpoint.ipynb
03-stl/: finder.cpp  tarefa1.cpp  tarefa2.cpp
04-cmake-debugging/: CMakeLists.txt
05-simd-I/src/: main.cpp  tarefa1.cpp
06-simd-II/: avx-mask.c  avx-sqrt.cpp
08-threads-I/: CMakeLists.txt  calcula_pi.cpp  exemplo1-threads.cpp  pi-numeric-integration.cpp
09-threads-II/: CMakeLists.txt  calcula_pi.cpp  exemplo1
10-threads-III/: CMakeLists.txt  calcula_pi.cpp  mandel.cpp
11-thread-safety/: CMakeLists.txt  pi_mc_par1.cpp  pi_mc_par2.cpp  pi_mc_par3.cpp  pi_mc_random  pi_mc_random.cpp  random.c
12-tarefas/: CMakeLists.txt  fib_par.cpp  pi_recursivo.cpp  race_cars.cpp
13-gpu-I/: exemplo1-criacao-iteracao.cu  exemplo2-transform.cu
14-gpu-II/: exemplo-pointer-gpu.cu  exemplo2-transform.cu
15-gpu-IV/: CMakeLists.txt  Filipe Borba - GPU Entrega.ipynb  naive.cu  par.cpp  respostas.md  seq.cu  tiling.cu
17-gpu-final/: pi_gpu.cu  pi_mc.cu  rand.cu
18-mpi-intro/: hello  max  max.cpp  mpi-errado1  mpi-errado1.cpp  sort  sort.cpp  whisper  whisper.cpp
20-mpi-cluster/: roteiro.md
projeto-02/: CMakeLists.txt  Filipe Borba - Projeto 2.ipynb  README.md  tsp.py  tsp_bb.cpp  tsp_par.cpp  tsp_seq.cpp
projeto-02/tests/: berlin52.txt  in05.txt  in06.txt  in11.txt  in12.txt  in13.txt
projeto-03/: 2opt_sol.cu  CMakeLists.txt  Filipe Borba - Projeto 3.ipynb  README.md  random_sol.cu  tsp_bb.cpp
projeto-03/tests/: in10.txt  pr439.txt
projeto-04/: 2opt-sol.cpp  CMakeLists.txt  Filipe Borba - Projeto 4.ipynb  README.md  hosts  mpi-sol.cpp  run_tests_local.sh  run_tests_remote.sh  tsp-seq.cpp
projeto-04/output/: time-2opt-sol-burma14  time-2opt-sol-in10  time-2opt-sol-ulysses16  time-2opt-sol-ulysses22  time-mpi-sol-burma14  time-mpi-sol-in10  time-mpi-sol-ulysses16  time-mpi-sol-ulysses22  time-tsp-seq-in10
projeto-04/tests/: ch130.txt  gil262.txt
projeto1/: CMakeLists.txt  Filipe Borba - Projeto 1.ipynb  README.md  main.cpp  rectangle.cpp  rectangle.hpp  simulator.cpp  simulator.hpp  supercomp_test100.txt  supercomp_test1000.txt  supercomp_test300.txt  supercomp_test500.txt  test_generator.py
projeto1/.ipynb_checkpoints/: Filipe Borba - Projeto 1-checkpoint.ipynb
